# legwork

./: .travis.yml  CMakeLists.txt  README.md
s/: setup
spec/: legwork_spec.cpp
src/: fcontext.h  legwork.cpp  legwork.h
